# UAST-Grep

./: .gitignore  CONTRIBUTING.md  README.md  UAST-Grep.sln
.github/workflows/: docs.yml  release.yml
deploy/: Build-Packages.ps1  Build-RustBinaries.ps1  Check-Version.ps1  Create-ReleaseArchives.ps1  Publish-Crates.ps1  Publish-GitHub.ps1  Publish-NuGet.ps1  Publish-PyPI.ps1  README.md
docs/: BENCHMARKS.md  PowerShell-AST-Reference.md  README.md  book.toml
docs/src/: 404.md  CHANGELOG.md  README.md  SUMMARY.md  faq.md
docs/src/contributing/: adding-languages.md  architecture.md  building.md
docs/src/getting-started/: first-pattern.md  installation.md  quick-start.md
docs/src/integrations/: cli.md  dotnet.md  python.md
docs/src/languages/: built-in.md  csharp.md  native.md  overview.md  powershell.md  wasm.md
docs/src/patterns/: cookbook.md  metavariables.md  native-patterns.md  uast-patterns.md
docs/src/rules/: cwe-owasp-coverage.md  performance.md  quality.md  rules-catalog.md  sarif.md  security.md  syntax.md
docs/theme/: custom.css  mermaid-theme.css
native/: README.md
native/uast_core/: .gitignore  Cargo.toml  build.rs
native/uast_core/.cargo/: config.toml
native/uast_core/grammars-native/: doxygen.dylib  vim.dylib
native/uast_core/grammars-wasm/: ada.wasm  agda.wasm  apex.wasm  arduino.wasm  awk.wasm  bitbake.wasm  cairo.wasm  comment.wasm  commonlisp.wasm  crystal.wasm  cuda.wasm  cue.wasm  d.wasm  dart.wasm  dhall.wasm  groovy.wasm  haskell.wasm  julia.wasm  ocaml.wasm  perl.wasm  r.wasm  scala.wasm  swift.wasm  zig.wasm
native/uast_core/src/: builtin_languages.rs  dynamic_loader.rs  error.rs  ffi.rs  ffi_matching.rs  ffi_rules.rs  ffi_sarif.rs  ffi_uast.rs  grammars.rs  lib.rs  native_loader.rs  parser.rs  query.rs  scanner.rs  tiers.rs  tree.rs  verify.rs  wasm_loader.rs
native/uast_core/src/cli/: languages.rs  mod.rs  output.rs  parse.rs  run.rs  scan.rs  ts_query.rs  verify.rs
native/uast_core/src/matching/: constraints.rs  matcher.rs  mod.rs  parser.rs  pattern.rs  query_compiler.rs
native/uast_core/src/python/: matcher.rs  mod.rs  parser.rs  scanner.rs  tree.rs  types.rs
native/uast_core/src/rules/: fix.rs  mod.rs  parser.rs  rule.rs  scanner.rs
native/uast_core/src/sarif/: mod.rs  schema.rs  writer.rs
native/uast_core/src/uast/: builtin.rs  convert.rs  mapper.rs  mappings.rs  mod.rs  schema.rs
python/: README.md  pyproject.toml
python/tests/: conftest.py  test_matcher.py  test_parser.py  test_scanner.py
python/uast_grep/: __init__.py  _native.pyi
rules/: README.md  universal-security.yaml
scripts/: Build-NativeGrammars.ps1  Build-WasmGrammars.ps1  README.md  build-native-grammars.sh  build-wasm-all.py  build-wasm-all.sh
src/: README.md
src/UAST.Cli/: DEPRECATED.md  Program.cs  UAST.Cli.csproj
src/UAST.Cli/Commands/: DirectCommand.cs  NativeSearchCommand.cs  TsQueryCommand.cs  UastNodeExtensions.cs
src/UAST.Core/: DEPRECATED.md  UAST.Core.csproj
src/UAST.Core/Caching/: AstCache.cs
src/UAST.Core/Configuration/: ParserBackend.cs
src/UAST.Core/Interfaces/: ILanguageMapper.cs  IPatternMatcher.cs  ISubprocessParser.cs
src/UAST.Core/Matching/: Constraint.cs  KindFilter.cs  NativePatternParser.cs  NativeTreeSitterMatcher.cs  ParallelScanner.cs  Pattern.cs  PatternAnalyzer.cs  PatternMatcher.cs  PatternParser.cs  PatternToQueryCompiler.cs
src/UAST.Core/Pooling/: NodePooling.cs
src/UAST.Core/Rules/: Rule.cs  RuleParser.cs  RuleYaml.cs
src/UAST.Core/Rules/BuiltIn/: universal-performance.yaml  universal-quality.yaml
src/UAST.Core/Schema/: Enums.cs  SourceSpan.cs  UastNode.cs
src/UAST.Core/Schema/Declarations/: DeclarationNode.cs  FunctionDeclaration.cs  TypeDeclaration.cs  VariableDeclaration.cs
src/UAST.Core/Schema/Expressions/: CSharpExtensions.cs  Calls.cs  Collections.cs  ExpressionNode.cs  Operators.cs  PowerShellExtensions.cs
src/UAST.Core/Schema/Extensions/: BashExtensions.cs  CSharpExtensions.cs  ClojureExtensions.cs  CppExtensions.cs  DartExtensions.cs  ElixirExtensions.cs  ErlangExtensions.cs  GoExtensions.cs  JavaExtensions.cs  KotlinExtensions.cs  LuaExtensions.cs  PhpExtensions.cs  PythonExtensions.cs  RubyExtensions.cs  RustExtensions.cs  ScalaExtensions.cs  SwiftExtensions.cs  TypeScriptExtensions.cs
src/UAST.Core/Schema/Statements/: CSharpStatements.cs  ControlFlow.cs  ExceptionHandling.cs  StatementNode.cs
src/UAST.Core/Schema/Types/: TypeReference.cs
src/UAST.Core/Transform/: OutputFormats.cs  Rewriter.cs
src/UAST.Native/: NativeLanguageRegistry.cs  NativeNode.cs  NativeParser.cs  QueryMatch.cs  RustBackedMapper.cs  RustUastParser.cs  SafeHandles.cs  UAST.Native.csproj  UastNative.cs
src/UAST.Net/: PatternMatcher.cs  QueryMatch.cs  RuleScanner.cs  UAST.Net.csproj  UastException.cs  UastNode.cs  UastParser.cs  UastTree.cs
src/UAST.Net/Models/: MatchResult.cs  ScanResult.cs  SourceSpan.cs
src/UAST.Net/Native/: SafeHandles.cs  UastNativeBindings.cs
src/UAST.Parsers/: DEPRECATED.md  MapperFactory.cs  UAST.Parsers.csproj
src/UAST.Parsers/Adapters/: NativeMapperAdapter.cs
src/UAST.Parsers/PowerShell/: PowerShellMapper.cs  SubprocessPowerShellMapper.cs
src/UAST.Parsers/Roslyn/: CSharpMapper.cs
tests/: CheckExports.cs  ParserTests.csproj  README.md  TestAllParsers.cs  TestNewMappers.cs  TestUastMappers.cs
tests/TestData/Languages/: CMakeLists.txt  Dockerfile  Makefile  test.R  test.adb  test.agda  test.awk  test.bicep  test.c  test.cairo  test.cbl  test.component.ts  test.cpp  test.cr  test.cs  test.cshtml  test.css  test.csv  test.cu  test.cue  test.d  test.dart  test.dhall  test.dox  test.dtd  test.elm  test.erb  test.erl  test.ex  test.f90  test.go  test.graphql  test.groovy  test.hcl  test.html  test.ino  test.java  test.jl  test.js  test.jsdoc  (+25 more)
tests/UAST.Net.Tests/: ModelTests.cs  SourceSpanTests.cs  UAST.Net.Tests.csproj  UastExceptionTests.cs  UastParserTests.cs
