[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uast-grep"
version = "0.1.0"
description = "Cross-language AST search and analysis - Python bindings for UAST-Grep"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "UAST-Grep Contributors" }
]
keywords = ["ast", "tree-sitter", "static-analysis", "code-search", "sarif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/your-org/uast-grep"
Documentation = "https://github.com/your-org/uast-grep#readme"
Repository = "https://github.com/your-org/uast-grep"
Issues = "https://github.com/your-org/uast-grep/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[tool.maturin]
# Build the Rust library with the python feature
features = ["python"]
# The Python module will be named uast_grep
module-name = "uast_grep._native"
# Path to Cargo.toml relative to this pyproject.toml
manifest-path = "../native/uast_core/Cargo.toml"
# Build for the current Python only
python-source = "."
# Strip symbols for smaller binaries
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
