[package]
name = "uast_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance parsing core for UAST-Grep - accepts language pointers from C#"

[lib]
name = "uast_core"
crate-type = ["cdylib", "rlib"]  # cdylib for .dll/.so/.dylib, rlib for tests

[[bin]]
name = "uast-grep"
path = "src/bin/main.rs"

[features]
default = ["wasm-download"]
# Enable WASM grammar loading for Tier 3 languages
# tree-sitter 0.26 has built-in WASM support via WasmStore and Language::from_wasm()
# This enables tree-sitter's "wasm" feature which adds wasmtime dependencies (~2MB)
wasm = ["dep:dirs-next", "tree-sitter/wasm"]
# Enable automatic downloading of WASM grammars from GitHub Releases
# Requires 'wasm' feature - grammars are cached locally after first download
wasm-download = ["wasm", "dep:ureq"]
# Enable built-in grammars - makes the library self-contained without needing C# registration
builtin-grammars = [
    "dep:tree-sitter-rust",
    "dep:tree-sitter-c",
    "dep:tree-sitter-cpp",
]
# Enable Python bindings via PyO3 - builds the library as a Python extension module
python = ["dep:pyo3"]

[dependencies]
# Core tree-sitter - version 0.26 for latest ABI
# Grammars regenerated with tree-sitter-cli 0.26.3
# Note: "wasm" feature is enabled via feature flag above when our wasm feature is active
tree-sitter = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
once_cell = "1.19"      # Lazy static initialization
thiserror = "2.0"       # Error handling
parking_lot = "0.12"    # Fast mutexes
rayon = "1.10"          # Parallel iteration
walkdir = "2.5"         # Directory traversal
streaming-iterator = "0.1"  # Required by tree-sitter for QueryMatches
libloading = "0.8"      # Dynamic DLL loading for grammar plugins
lazy_static = "1.5"     # Lazy static for FFI handle storage
regex = "1.11"          # Regex support for pattern constraints

# CLI dependencies
clap = { version = "4.4", features = ["derive", "color"] }  # Command-line argument parsing
console = "0.15"        # Terminal colors and styling
indicatif = "0.17"      # Progress bars
ignore = "0.4"          # .gitignore-aware file walking

# Built-in grammars (optional, enabled via 'builtin-grammars' feature)
# These grammars are compatible with tree-sitter 0.25 (ABI version 15)
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }

# WASM grammar loading support (optional, enabled via 'wasm' feature)
dirs-next = { version = "2.0", optional = true }  # Home directory detection for grammar cache
ureq = { version = "2.10", optional = true }      # HTTP client for downloading grammars

# Python bindings (optional, enabled via 'python' feature)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[build-dependencies]
cc = "1.0"  # Compile grammar C sources

[dev-dependencies]
criterion = "0.5"  # Benchmarking

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
